plugins {
  id 'java-library'
  id 'jacoco'
  id 'io.spring.dependency-management' version '1.1.7'
  id 'com.github.ben-manes.versions' version '0.54.0'
  id 'org.sonarqube' version '7.3.1.8318'
  id 'maven-publish'
  /*
    Applies analysis tools including checkstyle and OWASP Dependency checker.
    See https://github.com/hmcts/gradle-java-plugin
 */
  id 'uk.gov.hmcts.java' version '0.12.70'
}

group = 'uk.gov.hmcts'
version = '0.3.27'

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(21)
  }
  withSourcesJar()   // generates sources JAR
}

def configureSourceSet(String name) {
  sourceSets.create(name) { sourceSet ->
    sourceSet.java {
      compileClasspath += sourceSets.main.output + sourceSets.test.output
      runtimeClasspath += sourceSets.main.output + sourceSets.test.output
      srcDir "src/${name}/java"
    }
    sourceSet.resources.srcDir "src/${name}/resources"
  }
}

['smokeTest', 'integrationTest', 'functionalTest'].each { configureSourceSet(it) }

configurations {
  functionalTestImplementation.extendsFrom testImplementation
  functionalTestRuntimeOnly.extendsFrom runtimeOnly

  integrationTestImplementation.extendsFrom testImplementation
  integrationTestRuntimeOnly.extendsFrom runtimeOnly

  smokeTestImplementation.extendsFrom testImplementation
  smokeTestRuntimeOnly.extendsFrom runtimeOnly
}

tasks.withType(JavaCompile).configureEach {
  options.compilerArgs << '-parameters'
}

tasks.withType(JavaCompile).configureEach {
  options.compilerArgs << "-Xlint:unchecked" << "-Werror"
}

tasks.withType(Test).configureEach {
  useJUnitPlatform()
  failFast = true

  testLogging {
    exceptionFormat = 'full'
  }
}

tasks.register('functional', Test) {
  description = "Runs functional tests"
  group = "Verification"
  testClassesDirs = sourceSets.functionalTest.output.classesDirs
  classpath = sourceSets.functionalTest.runtimeClasspath
}

tasks.register('integration', Test) {
  description = "Runs integration tests"
  group = "Verification"
  testClassesDirs = sourceSets.integrationTest.output.classesDirs
  classpath = sourceSets.integrationTest.runtimeClasspath
  failFast = true
}

tasks.register('smoke', Test) {
  description = "Runs Smoke Tests"
  group = "Verification"
  testClassesDirs = sourceSets.smokeTest.output.classesDirs
  classpath = sourceSets.smokeTest.runtimeClasspath
}

jacocoTestReport {
  executionData(test, integration)
  reports {
    xml.getRequired().set(true)
    csv.getRequired().set(false)
    html.getRequired().set(true)
  }
}

tasks.sonarqube.dependsOn(jacocoTestReport)
tasks.check.dependsOn(integration)

sonarqube {
  properties {
    property "sonar.projectName", "HMCTS :: opal-common-lib"
    property "sonar.projectKey", "uk.gov.hmcts:opal-common-lib"
    // UserState is deprecated V1 compatibility code; do not penalise V2 helper migration as duplication.
    property "sonar.cpd.exclusions",
      "src/main/java/uk/gov/hmcts/opal/common/user/authorisation/model/UserState.java"
  }
}

// before committing a change, make sure task still works
dependencyUpdates {
  def isNonStable = { String version ->
    def stableKeyword = ['RELEASE', 'FINAL', 'GA'].any { qualifier -> version.toUpperCase().contains(qualifier) }
    def regex = /^[0-9,.v-]+$/
    return !stableKeyword && !(version ==~ regex)
  }
  rejectVersionIf { selection -> // <---- notice how the closure argument is named
    return isNonStable(selection.candidate.version) && !isNonStable(selection.currentVersion)
  }
}

// https://jeremylong.github.io/DependencyCheck/dependency-check-gradle/configuration.html
dependencyCheck {
  suppressionFile = 'config/owasp/suppressions.xml'
}

repositories {
  mavenLocal()
  mavenCentral()
  maven {
    url = uri('https://pkgs.dev.azure.com/hmcts/Artifacts/_packaging/hmcts-lib/maven/v1')
  }
}

ext {
  jacksonVersion = "2.22.0"
  lombokVersion = "1.18.46"
  mapstructVersion = "1.6.3"
  set('spring-framework.version', "7.0.8")
}

ext['snakeyaml.version'] = '2.0'

dependencyManagement {
  imports {
    mavenBom "tools.jackson:jackson-bom:3.2.0"
    mavenBom 'org.springframework.boot:spring-boot-dependencies:4.1.0'
    mavenBom 'org.springframework.cloud:spring-cloud-dependencies:2025.1.2'
    mavenBom "io.netty:netty-bom:4.2.16.Final"
    mavenBom "org.apache.logging.log4j:log4j-bom:2.26.1"
  }
}

dependencies {
  implementation 'uk.gov.hmcts:spring-exception-handler:1.0.2'
  implementation 'org.springframework.boot:spring-boot'
  implementation 'org.springframework:spring-context'
  implementation 'org.springframework:spring-aop'
  implementation 'org.springframework:spring-web'
  implementation 'org.springframework:spring-webmvc'
  implementation 'org.springframework:spring-orm'
  implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
  implementation 'jakarta.persistence:jakarta.persistence-api'
  api 'jakarta.xml.bind:jakarta.xml.bind-api'
  implementation 'org.aspectj:aspectjweaver'
  implementation 'com.launchdarkly:launchdarkly-java-server-sdk:7.14.0'
  implementation 'jakarta.servlet:jakarta.servlet-api'
  implementation 'org.springframework.security:spring-security-web'
  implementation 'org.springframework.security:spring-security-oauth2-jose'
  implementation 'org.springframework.security:spring-security-oauth2-resource-server'
  implementation "org.springframework.boot:spring-boot-starter-security"
  implementation 'tools.jackson.core:jackson-databind'
  implementation 'org.springframework.boot:spring-boot-starter-data-redis'
  implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:5.0.2', {
    exclude group: 'commons-fileupload', module: 'commons-fileupload'
  }
  implementation 'org.hibernate.validator:hibernate-validator:9.1.2.Final'    // CVE-2025-15104 false positive suppressed in owasp file
  compileOnly 'org.hibernate.orm:hibernate-core'

  implementation 'com.microsoft.azure:applicationinsights-web:3.7.9'
  implementation "org.mapstruct:mapstruct:${mapstructVersion}"

  runtimeOnly 'org.apache.tomcat.embed:tomcat-embed-el'
  runtimeOnly 'org.glassfish.jaxb:jaxb-runtime'

  compileOnly "org.projectlombok:lombok:${lombokVersion}"
  annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
  annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"

  testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
  testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"
  testAnnotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"

  integrationTestCompileOnly "org.projectlombok:lombok:${lombokVersion}"
  integrationTestAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"
  integrationTestAnnotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"

  functionalTestCompileOnly "org.projectlombok:lombok:${lombokVersion}"
  functionalTestAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"
  functionalTestAnnotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"

  smokeTestCompileOnly "org.projectlombok:lombok:${lombokVersion}"
  smokeTestAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"
  smokeTestAnnotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"

  testImplementation "org.springframework.boot:spring-boot-starter-test"
  testImplementation 'org.hibernate.orm:hibernate-core'
  testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
  integrationTestRuntimeOnly 'org.junit.platform:junit-platform-launcher'
  testImplementation 'javax.servlet:javax.servlet-api:4.0.1'
  testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
  testImplementation 'org.springframework.security:spring-security-test'

  //Added to override dependency version to resolve vulnerability
  implementation 'org.apache.tomcat.embed:tomcat-embed-core:11.0.24'
  implementation 'org.apache.tomcat.embed:tomcat-embed-websocket:11.0.24'
  implementation 'org.apache.commons:commons-lang3:3.20.0'
}

jar {
  archiveClassifier.set('')
}

publishing {
  repositories {
    maven {
      name = "AzureArtifacts"
      url = uri("https://pkgs.dev.azure.com/hmcts/Artifacts/_packaging/hmcts-lib/maven/v1")
      credentials {
        username = System.getenv("AZURE_DEVOPS_ARTIFACT_USERNAME")
        password = System.getenv("AZURE_DEVOPS_ARTIFACT_TOKEN")
      }
    }
  }
  publications {
    Main(MavenPublication) {
      from components.java
      groupId = project.group
      artifactId = 'opal-common-lib'
      version = project.version
    }
  }
}
tasks.register('runAllStyleChecks') {
  dependsOn 'checkstyleMain'
  dependsOn 'checkstyleTest'
  dependsOn 'checkstyleIntegrationTest'
  dependsOn 'checkstyleFunctionalTest'
}
// Gradle 7.x issue, workaround from: https://github.com/gradle/gradle/issues/17236#issuecomment-894768083
rootProject.tasks.named("processSmokeTestResources") {
  duplicatesStrategy = 'include'
}

wrapper {
    distributionType = Wrapper.DistributionType.ALL
}
